--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "sequelize": "sequelize init"
+    "sequelize-init": "sequelize init",
+    "sequelize-migrate": "sequelize db:migrate"
   },
   "repository": {
     "type": "git",
