--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "sequelize-init": "sequelize init",
-    "sequelize-migrate": "sequelize db:migrate"
+    "sequelize-migrate": "sequelize db:migrate",
+    "sequelize-drop-table": "sequelize db:migrate:undo"
   },
   "repository": {
     "type": "git",
