--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index.js",
     "sequelize-init": "sequelize init",
     "sequelize-migrate": "sequelize db:migrate",
-    "sequelize-drop-table": "sequelize db:migrate:undo"
+    "sequelize-drop-table": "sequelize db:migrate:undo",
+    "sequelize-insert-user": "db:seed:all"
   },
   "repository": {
     "type": "git",
