--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "sequelize-init": "sequelize init",
+    "sequelize-create-user": "sequelize model:create --name User --attributes firstName:string,lastName:string,email:string,password:string,gender:string,avata:string",
     "sequelize-migrate": "sequelize db:migrate",
     "sequelize-drop-table": "sequelize db:migrate:undo",
+    "sequelize-seed-users": "sequelize seed:create --name users",
     "sequelize-insert": "sequelize db:seed:all"
   },
   "repository": {
@@ -22,6 +24,7 @@
   },
   "homepage": "https://github.com/diego40g/Web-Chat-Backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
