--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "sequelize-init": "sequelize init",
+    "sequelize-create-user": "sequelize model:create --name User --attributes firstName:string,lastName:string,email:string,password:string,gender:string,avata:string",
     "sequelize-migrate": "sequelize db:migrate",
     "sequelize-drop-table": "sequelize db:migrate:undo",
+    "sequelize-seed-users": "sequelize seed:create --name users",
     "sequelize-insert": "sequelize db:seed:all"
   },
   "repository": {
@@ -24,6 +26,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
