the default chat user of sequelize command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "sequelize-drop-table": "sequelize db:migrate:undo",
     "sequelize-seed-users": "sequelize seed:create --name users",
     "sequelize-insert": "sequelize db:seed:all",
-    "sequelize-create-chat":"sequelize model:create --name Chat --attributes type:string"
+    "sequelize-create-chat":"sequelize model:create --name Chat --attributes type:string",
+    "sequelize-create-chatUser":"sequelize model:create --name ChatUser --attributes chatId:integer,userId:integer"
   },
   "repository": {
     "type": "git",
