add seed for chat command

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "sequelize-insert": "sequelize db:seed:all",
     "sequelize-create-chat":"sequelize model:create --name Chat --attributes type:string",
     "sequelize-create-chatUser":"sequelize model:create --name ChatUser --attributes chatId:integer,userId:integer",
-    "sequelize-create-message":"sequelize model:create --name Message --attributes type:string,message:text,chatId:integer,fromUserId:integer"
+    "sequelize-create-message":"sequelize model:create --name Message --attributes type:string,message:text,chatId:integer,fromUserId:integer",
+    "sequelize-seed-chats": "sequelize seed:create --name chats",
+    "sequelize-seed-db": "sequelize db:seed --seed 20221210035831-chats"
   },
   "repository": {
     "type": "git",
